use bootstrap/base.html navbar block and use include control block to include our navbar.html file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,9 @@
 {% extends 'bootstrap/base.html'%}
 
+<!-- Navbar block  --> 
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
 
 
 
@@ -10,6 +14,9 @@
 
 
 
+
+
+<!-- 
 <!DOCTYPE html>
 <html>
     <head>
@@ -20,7 +27,7 @@
         <title> Welcome to the best Movie Review website </title>
         {% endif %}
     </head>
-    <body> -->
+    <body> --> -->
         <!-- Content block --> 
 
         <!-- {% block content %}
