add view function for everything news and search view in views.py

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro displaySourcesList(sources) %}
-        {% for source in sources %}
+        {% for source in source %}
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <a href='/articles/{{source.id}}'>
               <h3 style="font-weight:bold">{{ source.name}}</h3>
