--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,15 @@
     
     <div class="container">
         <div class="row">
+            <div class="col-md-12 heading">
+                <form action="submit" id="search">
+                    <input type="text" name="search_query" placeholder="Search Topic" class="form-control">
+                    <input type="submit" value="submit" class="btn btn-warning">
+                </form>
+                <h1> {{name}} </h1>
+            </div>
+        </div>
+        <div class="row">
             <ul>
               {{ macro.displaySourcesList(sources)}}
             </ul>
