--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,14 +12,10 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">HOME</a></li>
+                <li><a href="/everything&40">GLOBAL NEWS</a></li>
+                
 
-                <li class="dropdown show"><a class="dropdown-toggle"id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">GLOBAL NEWS</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+
         </div>
 
     </div>
