--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,12 @@
         <title> Welcome to the best News website </title>
         {% endif %}
     </head> -->
+    <!-- Styles block -->
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+{% endblock %}
 
 {% block content %}
  <div class="container" style="margin-top:20px;">
