--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="row">
-        {% for article in article_list %}
+        {% for article in news %}
         <div class="col-md-3 articles-details">
             <a href={{article.url}} target="_blank">
                 <img src={{article.urlToImage}} alt="IMAGE LOADING...">
