--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,6 +1,13 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
+
+{% block styles%}
+    {{ super() }}
+    
+    <link rel="stylesheet" href="{{url_for('static',filename='css/articles.css')}}">
+{% endblock %}
+
 {% block content %}
     <title>{{ title }}</title>
 
