--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
 
 {% block styles%}
     {{ super() }}
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Girassol|Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
 {% endblock %}
 
